Linked work and projects section to second nav + fixed the work experience width and alignment

--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ body {
     background: -webkit-linear-gradient(to right, #FFFFFF, #ECE9E6);  /* Chrome 10-25, Safari 5.1-6 */
     margin-top: 2vh;
     font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
-    scroll-behavior: smooth;
+    scroll-behavior:smooth;
 }
 
 /* First Navigation Styles */
@@ -206,7 +206,7 @@ img {
     min-height: 91vh;
     padding: 2vh;
     max-width: 90%;
-    text-align: justify;
+    text-align: left;
 }
 
 .timeline {
@@ -217,7 +217,9 @@ img {
 
 .outer {
     border-left: 1px solid #333;
-    width: 70vw;
+    width: 80vw;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -233,8 +235,9 @@ img {
   }
 
   .info {
-    display: grid;
-    gap: 10px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
   }
 
   .title::before {
@@ -244,13 +247,13 @@ img {
     height: 8px;
     background-color: white;
     border-radius: 999px;
-    left: -28px;
+    left: -27px;
     border: 2.5px solid black;
   }
 
   .company, .time {
     font-size: 0.9rem ;
-    line-height: 0.7rem;
+    line-height: 0.9rem;
     font-weight: 600;
   }
 
